kubernetes/vector-operator/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vector-operator
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
